@@ -1,0 +1,6 @@
+Here is a list of known issues that need to be resolved.
+
+- The pipes will occasionally be put very close together (Outside the
+  defined parameter to insert new pipes)
+- The highscore system doesn't keep the highscore in the browser
+  like it should.
